<resources>
    <string name="app_name">Notatkon</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- my strings -->
    <string name="my_notes">Notatkon</string>
    <string name="search">Wyszukaj notatki</string>
    <string name="note_title">Tytuł</string>
    <string name="note_subtitle">Podtytuł</string>
    <string name="note_content">Utwórz notatkę...</string>
</resources>